welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:13: error: value += is not a member of Int
		compteur +=
                         ^